--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"files/emoji.json":["files/emoji.json"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
